# dependencies

./: .gitignore  README.md  pyproject.toml  readme.md  requirements-dev.txt
res/: jdepstest.dep
src/: basicgraph.py  getjdeps.py  main.py  packages.py  tools.py
src/dependencies/: basicgraph.py  getjdeps.py  main.py  packages.py  tools.py
test/: basicgraphtest.py  context.py  getjdepstest.py  packagestest.py  toolstest.py
tests/: test_basicgraph.py  test_getjdeps.py  test_packages.py  test_tools.py
